KSENROLL-9661: changed the "continue" button and "cancel" link on Inactivate Waitlist Confirmation dialog to use the correct css style. Left aligned button/link of all the dialogs.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@61741 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -1577,7 +1577,7 @@ div.ks-uif-table-column table tr td:nth-child(1) img {
 //Move buttons to bottom right of dialog
 .uif-dialogGroup fieldset {
   margin-top: 20px;
-  float: right;
+  margin-left: -12px;
 }
 
 //Transition for hover and click on buttons
